2001-06-16  Scott S. Goodwin  <scott@scottg.net>

	* init.c, nsopenssl.h: enormous changes to support client
	connections. Started moving a lot of the config options into the
	Driver structures so they are passed to things like LoadKey
	etc. Both client and server use most of the same functions such as
	LoadKey, LoadCertificate, etc. Created NsOpenSSLContext as a
	"view" into the public parts of NsServerSSLDriver and
	NsClientSSLDriver.

2001-06-15  Scott S. Goodwin  <scott@scottg.net>

	* all: changed define names for server
	(i.e. CONFIG_CIPHERSUITE became CONFIG_SERVER_CIPHERSUITE). Added
	defines for the upcoming client code. Got the SSL_CTX for the
	client working via ClientMakeContext. Added
	ClientVerifyServerCallback routine, NsClientSSLTrace routine.

	* readme.txt: updated.

	* init.c, nsopenssl.c, nsopenssl.h, ssl.c: created
	NsOpenSSLModuleData structure to hold the data about the module
	that is common between client and server functions. Pulled this
	data out of the NsServerSSLDriver and NsClientSSLDriver
	struct. Changed all references like sdPtr->module to be
	sdPtr->module->name.

	* init.c: changed ServerLoadCertificate to look for a certificate
	chain after the server's certificate. Simply append all of the
	certs in the chain to the end of the server cert file. Having a
	chain is optional.

2001-06-13  Scott S. Goodwin  <scott@scottg.net>

	* init.c: added NsClientSSLCreateDriver and NsClientSSLFreeDriver.

	* init.c, nsopenssl.h: moved OpenSSL initialization out of
	NsServerCreateDriver to the new NsInitOpenSSL function.

	* init.c, nsopenssl.c, nsopenssl.h: changed NsOpenSSLCreateDriver
	to NsServerSSLCreateDriver and NsOpenSSLFreeDriver to
	NsServerSSLFreeDriver.

	* nsopenssl.c: added NsClientSSLConnection and NsClientSSLDriver
	structs (I know, the client stuff doesn't need a driver; I'll work
	that issue later.)

	* all: changed NsOpenSSLConnection struct name to
	NsServerSSLConnection and NsOpenSSLDriver to NsServerSSLDriver in